src/test/resources/public/input/typechecking/pass/pass12.jova
class ASDF{
    private int y;

    public int func(int x) {
       return 0;
    }
}

class Testing {
    private ASDF a;
    private int x;

    public int func2(int x) {
        return a.func(this.x);
    }
}



