src/test/resources/public/input/typechecking/fail/incompatible_return/fail11.jova
class A {
  public int func() {
    return nix;
  }

  public string func() {
    return nix;
  }

  public bool func() {
    return nix;
  }
}
